fix a social network's mechanical
